# axum-cloudflare-adapter

./: .gitignore  Cargo.toml  README.md  readme.md
.github/: dependabot.yml
.github/workflows/: build-worker.yml  test.yml
adapter/: Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
adapter/src/: error.rs  lib.rs
example/: Cargo.toml  README.md  package.json  wrangler.toml
example/src/: lib.rs
macros/: Cargo.toml  readme.md
macros/src/: lib.rs
src/: lib.rs
