[package]
name = "axum-cloudflare-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", default-features = false }
worker = { version = "0.0.12 "}
http-body = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"

