[package]
name = "axum-cloudflare-adapter"
version = "0.4.2"
edition = "2021"
authors = ["Logan Keenan"]
description = "An adapter to easily run an Axum server in a Cloudflare worker."
rust-version = "1.63"
repository = "https://github.com/logankeenan/axum-cloudflare-adapter"
license = "MIT"
keywords = ["Cloudflare", "Axum", "WASM"]

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", default-features = false }
worker = { version = "0.0.17"}
http-body = "0.4.5"
axum-wasm-macros = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
tower-service = "0.3.2"

