[package]
name = "todo-worker"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
axum = { version = "^0.7.1", default-features = false }
axum-cloudflare-adapter = { path = "../adapter" }
oneshot = "0.1.6"
serde_json = "1.0.108"
tower-service = "0.3.2"
url = "2.3.1"
wasm-bindgen-futures = "0.4.34"
worker = "0.0.18"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
