[package]
name = "todo-worker"
version = "0.0.0"
edition = "2021"
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
axum = { version = "^0.8.2", default-features = false }
axum-cloudflare-adapter = { path = "../adapter" }
oneshot = "0.1.8"
serde_json = "1.0.138"
tower-service = "0.3.3"
url = "2.5.4"
wasm-bindgen-futures = "0.4.43"
worker = "^0.5.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
