[package]
name = "axum-cloudflare-adapter-macros"
version = "0.1.1"
edition = "2021"
authors = ["Logan Keenan"]
description = "DEPRECEATED: use axum-wasm-macros"
rust-version = "1.67.1"
repository = "https://github.com/logankeenan/axum-cloudflare-adapter"
license = "MIT"
keywords = ["Cloudflare", "Axum", "WASM"]

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
