[package]
name = "axum-cloudflare-adapter-macros"
version = "0.2.0"
edition = "2021"
authors = ["Logan Keenan"]
description = "DEPRECEATED: use axum-wasm-macros"
rust-version = "1.63"
repository = "https://github.com/logankeenan/axum-cloudflare-adapter"
license = "MIT"
keywords = ["Cloudflare", "Axum", "WASM"]

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
